Make background.html an event page.
As per http://developer.chrome.com/extensions/event_pages.html.

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
         "scripts": [
             "chrome_ex_oauth.min.js",
             "background.min.js"
-        ]
+        ],
+        "persistent": false
     },
     "permissions": ["notifications", "tabs", "https://api.twitter.com/"]
 }
