Workaround for bug in Chrome 31.
Bug detailed at https://code.google.com/p/chromium/issues/detail?id=310870.

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,6 @@
         ],
         "persistent": false
     },
+    "web_accessible_resources": ["chrome_ex_oauth.html"],
     "permissions": ["notifications", "tabs", "https://api.twitter.com/"]
 }
